# MAL-Dashboard

./: CMakeLists.txt  README.md
src/: curl.cpp  main.c
